# zkconv

./: Cargo.toml  README.md
benches/: bench_commit_real_data.rs  bench_conv_padding_real_data.rs  bench_conv_real_data.rs  bench_maxpool_real_data.rs  bench_relu_batch.rs
crates/lookup/arithmetic/: Cargo.toml
crates/lookup/arithmetic/src/: multilinear_poly.rs
crates/lookup/logup/: Cargo.toml
crates/lookup/logup/src/: prover.rs  verifier.rs
crates/lookup/pcs/: Cargo.toml
crates/lookup/pcs/src/: lib.rs
crates/lookup/pcs/src/hyrax_kzg/: hyrax_kzg_1.rs
crates/lookup/pcs/src/multilinear_kzg/: data_structures.rs  mod.rs
crates/lookup/poly_iop/: Cargo.toml
crates/lookup/poly_iop/src/: perm_check.rs
crates/lookup/utils/: Cargo.toml
crates/sumcheck/: Cargo.toml
crates/sumcheck/src/: lib.rs
dat/: testconv.py
dat/dat/: conv_layer_1.txt  conv_layer_11.txt  conv_layer_3.txt  conv_layer_6.txt  matrix_layer_32.txt  maxpool_layer_10.txt  maxpool_layer_17.txt  maxpool_layer_24.txt  maxpool_layer_31.txt  maxpool_layer_5.txt  relu_layer_12.txt  relu_layer_14.txt  relu_layer_16.txt  relu_layer_19.txt  relu_layer_2.txt  relu_layer_21.txt  relu_layer_23.txt  relu_layer_26.txt  relu_layer_28.txt  relu_layer_30.txt  relu_layer_4.txt  relu_layer_7.txt  relu_layer_9.txt
src/: lib.rs
src/commit/: commit.rs
src/conv/: prover.rs  verifier.rs
src/conv_padding/: prover.rs  verifier.rs
src/conv_padding_old/: prover.rs  verifier.rs
src/maxpool/: prover.rs  verifier.rs
src/relu/: prover.rs  verifier.rs
src/relu_old/: prover.rs  verifier.rs
tests/: test_commit_real_data.rs  test_conv.rs  test_conv_padding_old.rs  test_conv_padding_real_data.rs  test_conv_real_data.rs  test_hyrax.rs  test_logup.rs  test_maxpool.rs  test_maxpool_real_data.rs  test_pcs.rs  test_perm_check.rs  test_relu_old.rs  test_relu_old_real_data.rs  test_relu_real_data.rs  test_sumcheck.rs  test_sumcheck_hyrax.rs
